# monopiped

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
mini-monocypher/: Cargo.toml  README.md
mini-monocypher/examples/: crypto_aead.rs  crypto_blake2b.rs  crypto_blake2b_incremental.rs  crypto_blake2b_keyed.rs
mini-monocypher/mini-monocypher-sys/: Cargo.toml  README.md  build.rs
mini-monocypher/monocypher-sys/: build.rs
mini-monocypher/src/: lib.rs
mini-monocypher/tests/: tests.rs
monopiped/: Cargo.toml
monopiped/mini-monocypher/monocypher-sys/: Cargo.toml  build.rs  wrapper.h
monopiped/mini-monocypher/src/: lib.rs
monopiped/src/: conn.rs  main.rs  utils.rs
src/: conn.rs  main.rs  utils.rs  ws.rs
