[package]
name = "monopiped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
mini-monocypher = { path = "./mini-monocypher" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
zeroize = "1.6.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
