[package]
name = "monopiped"
version = "0.1.0"
authors = ["Naveen Nathan <naveen@lastninja.net>"]
description = "monopiped tunnels and encrypts TCP applications over TCP/HTTP(S) WebSockets"
documentation = "https://github.com/nnathan/monopiped"
homepage = "https://github.com/nnathan/monopiped"
repository = "https://github.com/nnathan/monopiped"
keywords = ["tunnel", "proxy", "tcp", "websockets"]
categories = ["command-line-utilities"]
license = "CC0-1.0"
edition = "2021"

[workspace]
members = [
  "mini-monocypher"
]

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
mini-monocypher = { version = "0.1.0", path = "./mini-monocypher" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
zeroize = "1.6.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0", features = ["native-tls"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
