[package]
name = "mini-monocypher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-monocypher-sys = { version = "0.1.0", path = "./mini-monocypher-sys" }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
