[package]
name = "mini-monocypher"
version = "0.1.0"
authors = ["Naveen Nathan <naveen@lastninja.net>"]
description = "Monocypher C-like API"
documentation = "https://github.com/nnathan/monopiped/tree/main/mini-monocypher"
homepage = "https://github.com/nnathan/monopiped/tree/main/mini-monocypher"
repository = "https://github.com/nnathan/monopiped/tree/main/mini-monocypher"
keywords = ["monocypher", "cryptography", "curve25519", "x25519", "blake2", "blake2b", "xchacha20poly1305"]
categories = ["api-bindings", "cryptography"]
license = "CC0-1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-monocypher-sys = { version = "0.1.0", path = "./mini-monocypher-sys" }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
hex-literal = "0.4.1"
